--- a/app/src/main/res/layout/activity_song_list_detail.xml
+++ b/app/src/main/res/layout/activity_song_list_detail.xml
@@ -21,11 +21,12 @@
                 app:contentScrim="?attr/colorPrimary"
                 app:statusBarScrim="@android:color/transparent"
                 app:collapsedTitleTextAppearance="@style/CollapsedTitleTextStyle"
-                app:expandedTitleTextAppearance="@style/ExpandedTitleTextStyle"
+                app:expandedTitleTextAppearance="@style/ExpandedTitleTextStyle1"
                 app:expandedTitleMarginEnd="45dp"
                 app:expandedTitleMarginStart="30dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 android:layout_width="match_parent"
+                app:titleEnabled="false"
                 android:layout_height="260dp">
 
             <ImageView
@@ -33,11 +34,105 @@
                     app:layout_collapseParallaxMultiplier="0.7"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    android:id="@+id/iv_cover"
+                    android:id="@+id/iv_background"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    app:layout_collapseMode="pin"
+                    android:layout_marginTop="120dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <androidx.cardview.widget.CardView
+                        app:cardBackgroundColor="@color/transparent"
+                        android:layout_marginLeft="15dp"
+                        app:cardCornerRadius="4dp"
+                        android:id="@+id/cardView"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp">
+
+                    <ImageView
+                            android:scaleType="centerCrop"
+                            android:id="@+id/iv_cover"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+
+                </androidx.cardview.widget.CardView>
+
+
+                <TextView
+                        android:layout_marginRight="10dp"
+                        android:ellipsize="end"
+                        android:lines="1"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="16sp"
+                        android:textColor="@color/color_white"
+                        app:layout_constraintLeft_toRightOf="@id/cardView"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:id="@+id/tv_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/tv_brief"
+                        android:text="@string/brief"
+                        app:layout_constraintLeft_toRightOf="@id/cardView"
+                        app:layout_constraintTop_toBottomOf="@id/tv_title"
+                        android:textColor="@color/color_white"
+                        android:textSize="12sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="20dp"
+                        android:ellipsize="end"
+                        android:lineSpacingMultiplier="1.2"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:textSize="12sp"
+                        android:maxLines="4"
+                        android:textColor="@color/color_white"
+                        app:layout_constraintLeft_toRightOf="@id/tv_brief"
+                        app:layout_constraintTop_toBottomOf="@id/tv_title"
+                        android:id="@+id/tv_description"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+
+                <LinearLayout
+                        app:layout_constraintRight_toRightOf="@id/cardView"
+                        android:layout_marginTop="5dp"
+                        app:layout_constraintLeft_toLeftOf="@id/cardView"
+                        app:layout_constraintTop_toBottomOf="@id/cardView"
+                        android:gravity="center_vertical"
+                        android:layout_marginRight="5dp"
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    <ImageView
+                            android:src="@drawable/ic_listener"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"/>
+
+                    <TextView
+                            android:id="@+id/tv_play_count"
+                            android:textColor="@color/common_white_text"
+                            android:textSize="12sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.Toolbar
+                    app:title="@string/song_list"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     android:id="@+id/toolbar"
