--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,8 +22,13 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <style name="FullScreenTheme" parent="AppTheme">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
     <!--侧滑菜单主题-->
-    <style name="SideMenuTheme" parent="Widget.Design.NavigationView">
+    <style name="SideMenuTheme" parent="Widget.Design.NavigationView">w
         <item name="android:textColor">@color/common_black_text</item>
         <item name="android:textSize">16sp</item>
 
@@ -71,6 +76,10 @@
 
     <style name="ExpandedTitleTextStyle">
         <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/common_white_text</item>
+    </style>
+    <style name="ExpandedTitleTextStyle1">
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/common_white_text</item>
     </style>
 
