--- a/app/src/main/res/layout/fragment_player_cover.xml
+++ b/app/src/main/res/layout/fragment_player_cover.xml
@@ -13,40 +13,43 @@
             android:layout_height="wrap_content">
 
         <TextView
+                android:id="@+id/qualityTv"
                 android:background="@drawable/shape_music_label"
                 android:paddingRight="10dp"
-                android:paddingBottom="2.5dp"
-                android:paddingTop="2.5dp"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
                 android:paddingLeft="10dp"
                 android:textColor="@color/color_white"
                 android:textSize="12dp"
-                android:text="音质"
+                android:text="@string/sound_quality_standard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
         <TextView
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:id="@+id/typeDescTv"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/shape_music_label"
                 android:paddingRight="10dp"
-                android:paddingBottom="2.5dp"
-                android:paddingTop="2.5dp"
                 android:paddingLeft="10dp"
                 android:textColor="@color/color_white"
                 android:textSize="12dp"
-                android:text="音质"
+                android:text="@string/res_local"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
         <TextView
+                android:id="@+id/soundEffectTv"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/shape_music_label"
                 android:paddingRight="10dp"
-                android:paddingBottom="2.5dp"
-                android:paddingTop="2.5dp"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
                 android:paddingLeft="10dp"
                 android:textColor="@color/color_white"
                 android:textSize="12dp"
-                android:text="音质"
+                android:text="@string/sound_effect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -54,10 +57,10 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
             app:civ_border_color="@color/Grey900"
-            app:civ_border_width="30dp"
+            app:civ_border_width="42dp"
             android:id="@+id/iv_cover"
             android:src="@drawable/default_cover"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="80dp"
             android:layout_width="225dp"
             android:layout_height="225dp"/>
 
