--- a/app/src/main/res/layout/fragment_player_cover.xml
+++ b/app/src/main/res/layout/fragment_player_cover.xml
@@ -54,14 +54,20 @@
                 android:layout_height="wrap_content"/>
 
     </LinearLayout>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_color="@color/Grey900"
-            app:civ_border_width="42dp"
-            android:id="@+id/iv_cover"
-            android:src="@drawable/default_cover"
+    <FrameLayout
+            android:padding="4dp"
             android:layout_marginTop="65dp"
+            android:background="@drawable/shape_cover_bg"
             android:layout_width="225dp"
-            android:layout_height="225dp"/>
+            android:layout_height="225dp">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_gravity="center"
+                app:civ_border_color="@color/Grey900"
+                app:civ_border_width="42dp"
+                android:id="@+id/iv_cover"
+                android:src="@drawable/default_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+    </FrameLayout>
 </LinearLayout>
