--- a/app/src/main/res/layout/fragment_control_layout.xml
+++ b/app/src/main/res/layout/fragment_control_layout.xml
@@ -15,8 +15,8 @@
             android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="4dp"
-                app:civ_border_color="@color/color_black"
+                app:civ_border_width="1dp"
+                app:civ_border_color="@color/Grey400"
                 android:id="@+id/iv_cover"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -38,10 +38,10 @@
                     android:textSize="15sp"/>
         </LinearLayout>
 
-        <ImageView
+        <com.lpc.snowmusic.widget.PlayPauseView
+                android:id="@+id/playPauseView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_play_big"/>
+                android:layout_height="wrap_content"/>
 
         <ImageView
                 android:id="@+id/playQueueIv"
